--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -46,3 +46,46 @@ body {
 a {
   text-decoration: none;
 }
+.react-tabs__tab {
+  display: inline-block;
+  /* border: 1px solid transparent; */
+  border: none;
+  bottom: -1px;
+  position: relative;
+  list-style: none;
+  padding: 6px 12px;
+  cursor: pointer;
+  color: gray;
+  font-weight: bold;
+  letter-spacing: .04rem;
+} 
+ .react-tabs__tab-list{
+  border:none;
+} 
+.react-tabs__tab--selected{
+  border-color: transparent;
+  color: transparent;
+  background-clip: text;
+  background-color: transparent;
+  background-image: linear-gradient(97deg, #FA6D01 11.69%, #FAB401 118.46%);
+  border-bottom: 2px solid orange;
+}
+@media screen and (max-width: 768px) {
+  .react-tabs__tab-list{
+    display: flex;
+    justify-content: space-around;
+    gap: 10px;
+    width: fit-content;
+  }
+  .react-tabs__tab-list > .react-tabs__tab {
+    text-align: center;
+    border-radius: 10px;
+    padding: .8rem 2rem;
+    width: 8rem;
+    background-color: aqua;
+  }
+  
+}
+
+
+ 
