--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -73,16 +73,26 @@ a {
 @media screen and (max-width: 768px) {
   .react-tabs__tab-list{
     display: flex;
-    justify-content: space-around;
-    gap: 10px;
-    width: fit-content;
+    gap: 12px;
+    overflow-x: scroll;
+    overflow-y: hidden;
+    padding: 20px 0;
   }
-  .react-tabs__tab-list > .react-tabs__tab {
-    text-align: center;
+  .react-tabs__tab-list  .react-tabs__tab {
     border-radius: 10px;
-    padding: .8rem 2rem;
-    width: 8rem;
-    background-color: aqua;
+    padding: .5rem 2rem;
+    background-color: #EFEFEF;
+    font-size: .8rem;
+    white-space: nowrap;
+  }
+  .react-tabs__tab--selected{
+    border-color: transparent;
+    color: transparent;
+    background-clip: text;
+    background-color: transparent;
+    background-image: linear-gradient(97deg, #FA6D01 11.69%, #FAB401 118.46%);
+    border-bottom: 2px solid orange;
+    border-radius: 0;
   }
   
 }
