--- a/frontend/styles/AduanDanAspirasi.module.scss
+++ b/frontend/styles/AduanDanAspirasi.module.scss
@@ -45,6 +45,8 @@
 
 .textarea {
   width: 100%;
+  color: black;
+
 }
 
 /* BUTTON */
@@ -231,6 +233,7 @@
   line-height: 37px;
   text-align: center;
   margin-left: 10px;
+  
 }
 
 /* SIZE BOX INPUT */
@@ -242,6 +245,7 @@
   border: none;
   padding: 10px;
   box-sizing: border-box;
+  color: black;
 }
 
 /* Jarak tiap div form */
