--- a/frontend/styles/NewsDetail.module.scss
+++ b/frontend/styles/NewsDetail.module.scss
@@ -3,13 +3,25 @@
   max-width: 960px;
   padding-top: 10vh;
   margin: 0 auto;
+  @media screen and(min-width:1280px) {
+    max-width: 1180px;
+  }
 }
 
 .head-news {
   display: flex;
   flex-direction: column;
   align-items: center;
+
   margin-bottom: 15px;
+
+  @media screen and (min-width: 1024px) {
+    display: flex;
+    flex-direction: column;
+    align-items:start;
+
+    margin-bottom: 15px;
+  }
 }
 
 .border-shape {
@@ -34,12 +46,18 @@
   font-weight: 700;
   font-size: 2.8125em;
   margin-bottom: 10px;
+  margin-top:15px;
   margin-inline: 12%;
   text-align: center;
+  @media screen and(min-width:1024px){
+    margin-inline: 0%;
+    font-size: 32px;
+  }
 }
 
 .news-info-date {
   margin-bottom: 10px;
+  color:#FA6D01;
 }
 
 .news-info-author {
@@ -53,7 +71,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  box-shadow: 0px 1px 20px -3px #00000040;
+  // box-shadow: 0px 1px 20px -3px #00000040;
   margin-bottom: 40px;
   overflow: hidden;
 
@@ -123,6 +141,11 @@
     padding: 0 20px;
     font-size: 1rem;
   }
+
+  @media screen and(min-width:1024px){
+    width: 100%;
+    font-size: 22px;
+  }
 }
 
 .content-quote {
@@ -155,7 +178,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0px 1px 20px -3px #00000040;
+    // box-shadow: 0px 1px 20px -3px #00000040;
     margin-bottom: 40px;
     overflow: hidden;
 
@@ -190,7 +213,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0px 1px 20px -3px #00000040;
+    // box-shadow: 0px 1px 20px -3px #00000040;
 
     img {
       width: 100%;
