--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -46,6 +46,12 @@ body {
 a {
   text-decoration: none;
 }
+/* .card{
+  align-self: normal;
+}
+.nama{
+  margin-bottom: 5px;
+} */
 .react-tabs__tab {
   display: inline-block;
   /* border: 1px solid transparent; */
@@ -70,6 +76,22 @@ a {
   background-image: linear-gradient(97deg, #FA6D01 11.69%, #FAB401 118.46%);
   border-bottom: 2px solid orange;
 }
+.card {
+  border-radius: 15px;
+  background: #FAFAFA;
+  box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.15);
+ }
+
+ .custom-dot-list-style button{
+  background-color: #FA6D01;
+ }
+ .react-multi-carousel-dot.react-multi-carousel-dot--active button{
+  background-color: rgb(141, 141, 141);
+ }
+ .react-multi-carousel-list {
+  padding: 0rem 0 2rem 0;
+  }
+ 
 @media screen and (max-width: 768px) {
   .react-tabs__tab-list{
     display: flex;
@@ -95,6 +117,16 @@ a {
     border-radius: 0;
   }
   
+}
+
+@media screen and (min-height: 670px) {
+  .section-gambar{
+    top: -3rem;
+  }
+  .section-desc{
+    position: relative;
+    top: -6rem;
+  }
 }
 
 
